[build-system]
requires = ["setuptools>=42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=slapping"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true

[project]
name = "g2p_id_py"
version = "0.3.0"
authors = [
  { name="w11wo", email="wilson@bookbotkids.com" },
]
description = "Indonesian G2P."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://github.com/bookbot-kids/g2p_id"
"Bug Tracker" = "https://github.com/bookbot-kids/g2p_id/issues"
"Documentation" = "https://bookbot-kids.github.io/g2p_id/"